css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;

    font-family: -apple-system, sans-serif;
}

html, body {
    height: 100vh;
    width: 100vw;
}

body {
    background: white;
}

header {
    background: black;
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;

    padding: 36px 36px;
}

header h1 {
    font-size: 3rem;
}

main {
    padding: 36px 36px;
    color: black;
}

main h2 {
    font-size: 2rem;
    margin-bottom: 24px;
}

#add-book-button {
    border: none;
    background: white;
    color: black;
    padding: 12px;
    font-size: 1rem;
    border-radius: 48px;
    cursor: pointer;
}

.library-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-auto-rows: 1fr;
    gap: 36px;
}

.book-card {
    background: black;
    border-radius: 36px;
    color: white;
    padding: 24px;

    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.book-card:hover {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.book-content {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.book-card h3 {
    font-size: 1.5rem;
}

.book-card p {
    font-size: 1.2rem;
}

.button-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 24px;
}

#read {
    transform: scale(2);
    cursor: pointer;
}

#delete-button {
    border: none;
    background: red;
    color: white;
    padding: 12px;
    font-size: 1rem;
    font-weight: bold;
    border-radius: 48px;
    cursor: pointer;
}

